# ROBO-ADVISORY

./: .gitignore  README.md  app.py  db.py  generate_portfolio.py  main.py  pyproject.toml  requirements.txt  retrain.py
allocation engine/: Allocation_Engine_Methodology.docx
fundamental analysis/: README.md  best_model_meta.json  predict.py  prepare.py  program.md  pyproject.toml  results.tsv  score.py  training.ipynb
technical analysis/: backtest_results.csv  metrics_v2.pkl  nifty50_integrated_ensemble_info.pkl  scaler_v2.pkl  train_technical.py  training.ipynb  training_backup_180days.ipynb
