[project]
name = "robo-advisory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tensorflow[and-cuda]>=2.20.0",
    "yahooquery>=2.4.1",
    "yfinance>=0.2.66",
]
