[project]
name = "finresearch"
version = "0.1.0"
description = "Autoresearch-style autonomous fundamental analysis scoring"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "requests>=2.31",
    "yfinance>=0.2.36",
    "pyarrow>=14.0",
    "fastparquet>=2023.10",
]

[project.optional-dependencies]
boosting = [
    "xgboost>=2.0",
    "lightgbm>=4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = ["*.py", "*.md", "*.toml"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]